# SabloaneProiectare

./: CMakeLists.txt  README.md
.github/workflows/: Linux.yml
src/: CMakeLists.txt  main.cpp
src/Assets/: CMakeLists.txt
src/Assets/inc/: Author.hpp  Book.hpp
src/Assets/inc/BookContents/: Chapter.hpp  Section.hpp  TableOfContents.hpp
src/Assets/inc/ChapterContents/: Element.hpp  Image.hpp  Paragraph.hpp  SubChapter.hpp  Table.hpp
src/Assets/inc/Elements/: Element.hpp  Image.hpp  Paragraph.hpp  Table.hpp  TableOfContents.hpp
src/Assets/inc/Engines/: BookStatistics.hpp  Visitor.hpp
src/Assets/src/: Author.cpp  Book.cpp  BookStatistics.cpp  Chapter.cpp  Image.cpp  Paragraph.cpp  Section.cpp  SubChapter.cpp  Table.cpp  TableOfContents.cpp
